Review eingearbeitet, Test mit error accessing field noch drin